Fixed cart icon!!
Turns out it was some weird invisible css stuff that we couldn't see in the text editor.

--- a/client side/src/components/NavBar/navbar.css
+++ b/client side/src/components/NavBar/navbar.css
@@ -40,7 +40,10 @@
   
           .cart {
             position: relative;
-  
+            right: 0px;
+            top:0px;
+            padding:0px;
+        
             span {
               font-size: 12px;
               width: 20px;
